--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
 .App {
   text-align: center;
 }
+.body{
+  text-align: center;
+  padding-top: 9%;
+
+  padding-bottom: 20%;
+  background-color: #2b5bbd
+}
 
 .App-logo {
   height: 40vmin;
@@ -21,18 +28,9 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: rgb(36, 53, 209);
 }
 
 .App-link {
   color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
